# vcard-service

./: .gitignore  google_wallet_setup.py  main.py  pyproject.toml  requirements.txt  tests.py
.github/workflows/: cron.yml  keepalive.yml
apple_card/: apple_card_tools.py
apple_card/en.lproj/: pass.strings
apple_card/he.lproj/: pass.strings
resources/certs/: certificate.pem
resources/en.lproj/: pass.strings
src/applepassgenerator/: client.py  models.py
src/vcard/: __init__.py  __main__.py
src/vcard/resources/certs/: certificate.pem
src/vcard/resources/he.lproj/: pass.strings
