[tool.poetry]
name = "vcard-service"
version = "0.1.0"
packages = [
    { include = "applepassgenerator", from = "src" },
    { include = "vcard", from = "src" }
]
include = [
    "vcard/resources/**/*",
]
description = ""
authors = ["Jossef <jossef12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
gdolim = "1.1.0"
python-dotenv = "0.20.0"
phonenumbers = "8.12.55"
boto3 = "^1.34.56"  # Upgraded from 1.24.80
google-api-python-client = "2.170.0"
google-auth-httplib2 = "0.2.0"
google-auth = "2.40.2"
poetry-core = "2.1.3"
cryptography = "45.0.3"
pyjwt = "^2.10.1"

